fix: add permissions to workflow and clean URLs in package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
+
 {
-  "name": "zibanouri",
+  "name": "portfolio",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.2.0",
   "type": "module",
   "description": "React-Ts + Tailwind portfolio Template",
   "keywords": [
     "react",
     "vite",
     "typescript",
-    "project-name",
-    "admin",
-    "admin-panel",
-    "responsive"
+    "portfolio"
   ],
   "author": {
     "name": "Ziba Nouri",
@@ -20,41 +18,45 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zibanouri/zibanouri.git"
+    "url": "git+https://github.com/zibanouri/github.git"
   },
   "bugs": {
-    "url": "https://github.com/zibanouri/zibanouri/issues"
+    "url": "https://github.com/zibanouri/portfolio/issues"
   },
   "profiles": {
+    "googleScholar": "https://scholar.google.com/citations?user=Rhue_kkAAAAJ&hl=en",
     "gitHub": "https://github.com/zibanouri",
-    "linkedin": "https://www.linkedin.com/in/zibanouri"
+    "linkedin": "https://www.linkedin.com/in/zibanouri",
+    "researchgate": "https://www.researchgate.net/profile/ziba-nouri"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
+    "@eslint/js": "^9.32.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lucide-react": "^0.526.0",
     "prettier": "^3.6.2",
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6"
   }
 }
+
