--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lint:ci": "eslint . --max-warnings=0"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
